# uroman-rs

./: Cargo.toml  LICENSE  README.md  build.rs
data/: romanization-table.txt
src/: core.rs  lattice.rs  lib.rs  main.rs  rom_rule.rs
tests/: test.rs  unit_tests.rs
