[package]
name = "uroman"
authors = ["fulm-o <fulmlumo@gmail.com>"]
version = "0.6.1"
edition = "2024"
repository = "https://github.com/fulm-o/uroman-rs"
description = "A blazingly fast, self-contained Rust reimplementation of the uroman universal romanizer."
readme = "README.md"
license = "Apache-2.0"
build = "build.rs"
keywords = ["uroman", "romanization", "unicode", "nlp", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "uroman-rs"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
regex = "1.11.2"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
unicode_names2 = "2.0.0"
unicode-properties = "0.1.3"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.12.0"
num-rational = { version = "0.4.2", features = ["serde"] }
ordered-float = "5.0.0"
phf = { version = "0.13.1", features = ["macros"] }
indexmap = "2.11.4"
thiserror = "2.0.16"

clap = { version = "4.5.48", features = ["derive"], optional = true }
rustyline = { version = "17.0.1", features = ["derive"], optional = true }
dirs = { version = "6.0.0", optional = true }
unicode-width = { version = "0.2.1", optional = true }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[[test]]
name = "unit_test"
path = "tests/unit_tests.rs"
harness = true

[features]
default = ["cli"]
cli = [
    "dep:clap",
    "dep:rustyline",
    "dep:dirs",
    "dep:unicode-width",
]
