[package]
name = "uroman"
authors = ["stellanomia <fulmlumo@gmail.com>"]
version = "0.6.3"
edition = "2024"
repository = "https://github.com/stellanomia/uroman-rs"
description = "A blazingly fast, self-contained Rust reimplementation of the uroman universal romanizer."
readme = "README.md"
license = "Apache-2.0"
build = "build.rs"
keywords = ["uroman", "romanization", "unicode", "nlp", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "uroman-rs"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
unicode_names2 = "2.0.0"
unicode-properties = "0.1.4"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.12.0"
num-rational = { version = "0.4.2", features = ["serde"] }
ordered-float = "5.1.0"
phf = { version = "0.13.1", features = ["macros"] }
thiserror = "2.0.17"

clap = { version = "4.5.51", features = ["derive"], optional = true }
rustyline = { version = "17.0.2", features = ["derive"], optional = true }
dirs = { version = "6.0.0", optional = true }
unicode-width = { version = "0.2.2", optional = true }
rayon = "1.11.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[[test]]
name = "unit_test"
path = "tests/unit_tests.rs"
harness = true

[features]
default = ["cli"]
cli = [
    "dep:clap",
    "dep:rustyline",
    "dep:dirs",
    "dep:unicode-width",
]
